# sdl2-with-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.c
